grammars/tree-sitter-localisation/test/corpus/localisation.txt
==================
Headers, entries, and substitutions
==================
﻿l_english:
# an original fixture comment
greeting:0 "Hello $NAME$ [Root.GetName] §YGold§!"
duplicate:1 "First"
duplicate:2 "Second"
escaped:0 "escaped \"quote\""
---

(source_file
  (language_header
    (language_identifier))
  (newline)
  (comment)
  (newline)
  (entry
    (localisation_key)
    (version)
    (localisation_string
      (parameter_substitution)
      (scope_reference)
      (colour_tag)))
  (newline)
  (entry
    (localisation_key)
    (version)
    (localisation_string))
  (newline)
  (entry
    (localisation_key)
    (version)
    (localisation_string))
  (newline)
  (entry
    (localisation_key)
    (version)
    (localisation_string
      (escape_sequence)
      (escape_sequence))))

==================
Unquoted recovery value
==================
l_german:
legacy:0 legacy value
---

(source_file
  (language_header
    (language_identifier))
  (newline)
  (entry
    (localisation_key)
    (version)
    (unquoted_value)))
